# bishop

./: .gitignore  README.md  deploy
.github/: RELEASE_SETUP.md
.github/workflows/: release.yml
deploy-app/: .env.signing.example  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
deploy-app/scripts/: build-linux.sh  build-signed.sh  linux-builder.Dockerfile  release.sh
deploy-app/src/: App.svelte  app.css  main.ts
deploy-app/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
deploy-app/src-tauri/capabilities/: default.json
deploy-app/src-tauri/icons/: icon.icns
deploy-app/src-tauri/resources/: deploy
deploy-app/src-tauri/src/: audit.rs  deploy_script.rs  errors.rs  lib.rs  main.rs  paths.rs  tray.rs  types.rs
deploy-app/src-tauri/src/commands/: check.rs  containers.rs  deploy.rs  env_vars.rs  history.rs  hosts.rs  init_project.rs  logs.rs  metrics.rs  mod.rs  onepassword.rs  paste.rs  projects.rs  sample.rs  scaffold.rs  scrollback.rs  ssh_test.rs  step.rs  terminal.rs
deploy-app/src-tauri/src/config/: mod.rs  project.rs  remote.rs  store.rs
deploy-app/src-tauri/src/db/: migrations.rs  mod.rs
deploy-app/src-tauri/src/ssh/: mod.rs
deploy-app/src/lib/: api.ts  confirm.svelte.ts  hosts.svelte.ts  network.svelte.ts  palette.svelte.ts  stores.svelte.ts  tasks.svelte.ts  templates.ts  terminals.svelte.ts  theme.svelte.ts  toast.svelte.ts  types.ts  updater.svelte.ts
deploy-src/: 00-header.sh  01-colors.sh  02-paths.sh  03-prompts.sh  04-remote.sh  99-main.sh  README.md  build.sh
(+30 files in other folders)
