[package]
name = "deploy-app"
version = "0.1.2"
description = "Desktop companion for ./deploy CLI"
edition = "2021"
rust-version = "1.77"

[lib]
name = "deploy_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
base64 = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
portable-pty = "0.8"
regex = "1"
whoami = "1"
once_cell = "1"
image = { version = "0.25", default-features = false, features = ["png"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
